# bar-i

./: .gitignore  Copy of Audit Dashboard.xlsx  README.md  pyproject.toml
invoice_extractor/: __init__.py  cli.py  default_templates.json  gui.py  learn.py  ocr.py  pipeline.py  template_learning.py  templates.py
tests/: test_template_learning.py  test_templates.py
