[project]
name = "invoice-extractor"
version = "0.1.0"
description = "Tool for extracting structured data from scanned invoices."
authors = [{name = "Unknown"}]
requires-python = ">=3.10"
dependencies = [
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.3",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
